--- a/htmlify.csproj
+++ b/htmlify.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="src\" />
+    <Folder Include="includes\" />
+    <Folder Include="src\Exceptions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXmlSDK" Version="2.0.0" />
+  </ItemGroup>
 </Project>
